--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@tbd54566975/girl-math",
+  "name": "girl-math",
   "version": "0.0.1",
   "description": "Math for Girls",
   "type": "module",
