--- a/.github/workflows/release-npm.yaml
+++ b/.github/workflows/release-npm.yaml
@@ -52,7 +52,7 @@ jobs:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
         run: |
           # Fetch the published version on NPMjs.com.
-          PUBLISHED_VERSION=$(npm view @tbd54566975/tbdex version 2>/dev/null || echo "0.0.0")
+          PUBLISHED_VERSION=$(npm view @tbd54566975/girl-math version 2>/dev/null || echo "0.0.0")
           echo "Published Version: $PUBLISHED_VERSION"
 
           # Fetch the version in the GitHub repo's package.json file.
@@ -63,10 +63,10 @@ jobs:
           # Compare the repo and NPMjs.com package versions.
           IS_GREATER=$(semver --range ">$PUBLISHED_VERSION" $REPO_VERSION || true)
           if [ -n "$IS_GREATER" ] ; then
-            echo "@tbd54566975/tbdex@$REPO_VERSION is latest"
+            echo "@tbd54566975/girl-math@$REPO_VERSION is latest"
             echo "IS_LATEST=true" >> $GITHUB_ENV
           else
-            echo "@tbd54566975/tbdex@$REPO_VERSION is already published or repo version is lower"
+            echo "@tbd54566975/girl-math@$REPO_VERSION is already published or repo version is lower"
             echo "IS_LATEST=false" >> $GITHUB_ENV
           fi
 
@@ -78,7 +78,7 @@ jobs:
         if: env.IS_LATEST == 'true'
         run: npm run build
 
-      - name: Publish @tbd54566975/tbdex@${{ env.REPO_VERSION }}
+      - name: Publish @tbd54566975/girl-math@${{ env.REPO_VERSION }}
         if: env.IS_LATEST == 'true'
         env:
           NODE_AUTH_TOKEN: ${{secrets.npm_token}}
